--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,9 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-family: var(--font-geist-sans);
+  overflow-y: auto;
+  width: 100%;
 }
 
 body {
@@ -31,7 +32,12 @@ a {
   }
 }
 
-
+.container {
+    margin: 0 auto;
+    max-width: 1120px;
+    padding: 0 20px;
+    width: 100%;
+  }
 
 @layer base {
   :root {
